add database support

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,11 @@
 {
-    "require": {
-        "fakerphp/faker": "^1.19"
-    }
+  "require": {
+    "ramsey/uuid": "^4.2",
+    "cocur/slugify": "^4.1",
+    "ext-pdo": "*",
+    "nesbot/carbon": "^2.57"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.19"
+  }
 }
