--- a/app/composer.json
+++ b/app/composer.json
@@ -7,5 +7,10 @@
   },
   "require-dev": {
     "fakerphp/faker": "^1.19"
+  },
+  "autoload": {
+    "psr-4": {
+      "Models\\": "models/"
+    }
   }
 }
