--- a/app/composer.json
+++ b/app/composer.json
@@ -3,14 +3,18 @@
     "ramsey/uuid": "^4.2",
     "cocur/slugify": "^4.1",
     "ext-pdo": "*",
-    "nesbot/carbon": "^2.57"
+    "nesbot/carbon": "^2.57",
+    "guzzlehttp/guzzle": "^7.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.19"
   },
   "autoload": {
     "psr-4": {
-      "Models\\": "models/"
+      "Blog\\Models\\": "models/",
+      "Blog\\Controllers\\": "controllers/",
+      "Blog\\Request\\Validators\\": "validators/",
+      "Blog\\ViewComposers\\": "view-composers/"
     }
   }
 }
